--- a/style/custom.css
+++ b/style/custom.css
@@ -1,14 +1,34 @@
 :root{
     font-size: 62.5%;
+
+    --primary: #0cd664;
+    --primary-dark: #0ca14b;
+    --primary-transp: hsla(145, 100%, 42%, 0.302);
+    --paragraph: #dbdbdb;
+    --paragraph-white:#F7F9F9;
+    --gray: #8b8989;
+    --light-gray: #2e353f;
+    --background: #1f262f;
 }
 
 body{
     font-size: 1.6rem;
     font-family: 'Roboto', sans-serif;
     text-align: center;
+    color: var(--paragraph);
+
+    background-color: var(--background);
 }
 
-section {
+a{
+    color: var(--primary);
+}
+
+a:hover{
+    color: var(--primary-dark);
+}
+
+section:not(#footer) {
     padding-bottom: 4rem;
     padding-top: 4rem;
 }
@@ -20,14 +40,14 @@ textarea {
 
 #hero{
     width: 100%;
-    height: 90vh;
+    height: 100vh;
 }
 
 #hero video{
     width: 100%;
     height: 100%;
     position: absolute;
-    top: -86px;
+    top: 0;
     left: 0;
     z-index: 5;
     object-fit: cover;
@@ -37,11 +57,11 @@ textarea {
     width: 100%;
     height: 100%;
     position: absolute;
-    top: -86px;
+    top: 0;
     left: 0;
     z-index: 15;
     background: url(../hero/texture.png);
-    filter: opacity(50%);
+    filter: opacity(30%);
 }
 
 #hero::after{
@@ -49,16 +69,33 @@ textarea {
     height: 100%;
     content: "";
     position: absolute;
-    top:-86px;
+    top: 0;
     left: 0;
     z-index: 10;
-    background: rgba(0,0,0,0.4);
+    background: rgba(0,0,0,0.2);
 }
 
 .card {
     width: 25%;
     float: left;
     margin: 20px;
+    
+    background: var(--paragraph-white);
+    color: var(--light-gray);
+}
+
+.modal.show .modal-dialog{
+    color: #212529;
+    text-align: left;
+}
+
+.accordion-button:not(.collapsed){
+    color: var(--primary);
+    background-color: #e1ffed;
+}
+
+.accordion-button:focus{
+    box-shadow: 0 0 0 0.25rem hsla(145, 100%, 42%, 0.302);
 }
 
 .card img{
@@ -78,3 +115,8 @@ textarea {
 header h1 img{
     height: 40px;
 }
+
+#footer a{
+    text-decoration: none;
+}
+
