--- a/style/custom.css
+++ b/style/custom.css
@@ -9,6 +9,7 @@
     --gray: #8b8989;
     --light-gray: #2e353f;
     --background: #1f262f;
+    --background-black:#121212;
 }
 
 body{
@@ -19,6 +20,15 @@ body{
 
     background-color: var(--background);
 }
+
+h2{
+    font-size: 2rem;
+}
+
+h3{
+    font-size: 1.8rem;
+}
+
 
 a{
     color: var(--primary);
@@ -33,9 +43,8 @@ section:not(#footer) {
     padding-top: 4rem;
 }
 
-input,
-textarea {
-    margin-bottom: 1rem;
+.container{
+    padding-inline: 2.4rem;
 }
 
 #hero{
@@ -72,30 +81,38 @@ textarea {
     top: 0;
     left: 0;
     z-index: 10;
-    background: rgba(0,0,0,0.2);
+    background: rgba(0,0,0,0.3);
+}
+
+#hero .hero__content{
+    z-index: 20;
+}
+
+.hero__content img{
+    width: 13rem;
+    position: absolute;
+    top: 1vh;
+    left: 15vh;
+
+    /* width: 30rem;
+
+    position: absolute;
+    top: calc(50vh - 15rem);
+    left: 5vh; */
+}
+
+.center{
+    display: flex;
+    justify-content: center;
 }
 
 .card {
-    width: 25%;
+    width: min(30rem,100%);
     float: left;
-    margin: 20px;
+    margin-bottom: 2rem;
     
     background: var(--paragraph-white);
     color: var(--light-gray);
-}
-
-.modal.show .modal-dialog{
-    color: #212529;
-    text-align: left;
-}
-
-.accordion-button:not(.collapsed){
-    color: var(--primary);
-    background-color: #e1ffed;
-}
-
-.accordion-button:focus{
-    box-shadow: 0 0 0 0.25rem hsla(145, 100%, 42%, 0.302);
 }
 
 .card img{
@@ -112,8 +129,26 @@ textarea {
     filter: grayscale(0);
 }
 
-header h1 img{
-    height: 40px;
+.modal.show .modal-dialog{
+    color: #212529;
+    text-align: left;
+}
+
+.accordion-button:not(.collapsed){
+    color: var(--primary-dark);
+    background-color: #e1ffed;
+}
+
+.accordion-button:focus{
+    box-shadow: 0 0 0 0.25rem hsla(145, 100%, 42%, 0.302);
+}
+
+#about p{
+    text-align: left;
+}
+
+#about h3{
+    margin-top: 2rem;
 }
 
 #footer a{
