--- a/style/custom.css
+++ b/style/custom.css
@@ -10,6 +10,14 @@
     --light-gray: #2e353f;
     --background: #1f262f;
     --background-black:#121212;
+
+    --hero-h1: min (75rem , 100%)
+}
+
+body,
+html{
+    width: 100%;
+    height: 100%;
 }
 
 body{
@@ -19,6 +27,7 @@ body{
     color: var(--paragraph);
 
     background-color: var(--background);
+    overflow: overlay;
 }
 
 h2{
@@ -34,8 +43,13 @@ a{
     color: var(--primary);
 }
 
-a:hover{
+a:hover,
+.green{
     color: var(--primary-dark);
+}
+
+.badge{
+    background-color: var(--primary-dark) !important;
 }
 
 section:not(#footer) {
@@ -81,24 +95,62 @@ section:not(#footer) {
     top: 0;
     left: 0;
     z-index: 10;
-    background: rgba(0,0,0,0.3);
+    background: rgba(0,0,0,0.5);
 }
 
-#hero .hero__content{
+#hero .hero__content,
+.logo__white,
+.hero__contentDesktop{
     z-index: 20;
 }
 
-.hero__content img{
+.logo__black{
     width: 13rem;
     position: absolute;
     top: 1vh;
-    left: 15vh;
+    left: 15vh;  
+}
 
-    /* width: 30rem;
-
+.hero__contentDesktop,
+.logo__white{
     position: absolute;
-    top: calc(50vh - 15rem);
-    left: 5vh; */
+    left: 50%;
+    transform: translateX(-50%)
+}
+
+.logo__white{
+    width: 15rem;
+    top: 48rem;  
+}
+
+
+.hero__contentDesktop{
+    width: min(75rem,100%);
+    top: 60rem;
+}
+
+.hero__contentDesktop h1{
+    color: white;
+    font-weight: 100;
+}
+
+.hero__contentDesktop svg path{
+    
+    fill: var(--primary-dark);
+}
+
+.hero__contentDesktop svg{
+    width: 5rem;
+}
+
+.hero__contentDesktop svg:hover,
+.hero__contentDesktop svg:hover path{
+        -webkit-animation: swing 1s ease;
+        animation: swing 1s ease;
+        -webkit-animation-iteration-count: 1;
+        animation-iteration-count: 1;
+
+        fill:var(--primary);   
 }
 
 .card {
@@ -112,20 +164,6 @@ section:not(#footer) {
 
 .twitter-tweet-rendered{
     width: min(37rem,100%) !important;
-}
-
-.card img{
-    transition: all .5s;
-    filter: grayscale(100%);
-    border-radius: .4rem;
-}
-
-.card img:hover {
-    -webkit-transform: scale(1.05);
-    -ms-transform: scale(1.05);
-    transform: scale(1.05);
-
-    filter: grayscale(0);
 }
 
 .modal.show .modal-dialog{
@@ -150,7 +188,91 @@ section:not(#footer) {
     margin-top: 2rem;
 }
 
+#footer{
+    background-color: var(--primary);
+    color: var(--background);
+}
+
 #footer a{
     text-decoration: none;
 }
 
+@-webkit-keyframes swing
+{
+    15%
+    {
+        -webkit-transform: translateX(5px);
+        transform: translateX(5px);
+    }
+    30%
+    {
+        -webkit-transform: translateX(-5px);
+       transform: translateX(-5px);
+    } 
+    50%
+    {
+        -webkit-transform: translateX(3px);
+        transform: translateX(3px);
+    }
+    65%
+    {
+        -webkit-transform: translateX(-3px);
+        transform: translateX(-3px);
+    }
+    80%
+    {
+        -webkit-transform: translateX(2px);
+        transform: translateX(2px);
+    }
+    100%
+    {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+    }
+}
+@keyframes swing
+{
+    15%
+    {
+        -webkit-transform: translateX(5px);
+        transform: translateX(5px);
+    }
+    30%
+    {
+        -webkit-transform: translateX(-5px);
+        transform: translateX(-5px);
+    }
+    50%
+    {
+        -webkit-transform: translateX(3px);
+        transform: translateX(3px);
+    }
+    65%
+    {
+        -webkit-transform: translateX(-3px);
+        transform: translateX(-3px);
+    }
+    80%
+    {
+        -webkit-transform: translateX(2px);
+        transform: translateX(2px);
+    }
+    100%
+    {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+    }
+}
+
+@media (min-width:1024px) {
+    .card img{
+        transition: all .5s;
+        border-radius: .4rem;
+    }
+    
+    .card img:hover {
+        -webkit-transform: scale(1.05);
+        -ms-transform: scale(1.05);
+        transform: scale(1.05);
+    }
+}
