style: modificar cards

--- a/style/custom.css
+++ b/style/custom.css
@@ -61,8 +61,12 @@ a{
 }
 
 section:not(#footer) {
-    padding-bottom: 4rem;
-    padding-top: calc(var(--header-height) + 4rem);
+    padding-bottom: 3rem;
+    padding-top: calc(var(--header-height) + 3rem);
+}
+
+#hero{
+    margin-bottom: 3rem;
 }
 
 .bg{
@@ -197,10 +201,11 @@ header.fixed-top{
 .card {
     width: min(30rem,100%);
     float: left;
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
     
     background: var(--paragraph-white);
     color: var(--light-gray);
+    box-shadow: 3px 3px rgba(255,255,255,0.1);
 }
 
 .card-body .btn-primary,
@@ -208,8 +213,11 @@ header.fixed-top{
     font-size: 1.6rem;
 }
 
+.card-body{
+    border-top: 1px solid rgba(0,0,0,0.2);
+}
 .twitter-tweet-rendered{
-    width: min(37rem,100%) !important;
+    width: min(30rem,100%) !important;
 }
 
 .modal.show .modal-dialog{
