--- a/style/custom.css
+++ b/style/custom.css
@@ -29,11 +29,10 @@ body{
     color: var(--paragraph);
 
     background-color: var(--background);
-    overflow: overlay;
 }
 
 h2{
-    font-size: 2rem;
+    font-size: 2.1rem;
 }
 
 h3{
@@ -61,7 +60,6 @@ a{
 }
 
 section:not(#footer) {
-    padding-bottom: 3rem;
     padding-top: calc(var(--header-height) + 3rem);
 }
 
@@ -217,6 +215,13 @@ header.fixed-top{
     border-top: 1px solid rgba(0,0,0,0.2);
 }
 
+.playlist__embed iframe{
+    width: min(64rem,100%);
+    height: 32rem;
+    border: none;
+    border-radius: 1rem;
+}
+
 .about__provacoes .row>*{
     width: auto;
 }
@@ -248,7 +253,7 @@ header.fixed-top{
 }
 
 #about h3{
-    margin-top: 2rem;
+    margin-top: 3rem;
 }
 
 #footer{
