feat: concluir footer

--- a/style/custom.css
+++ b/style/custom.css
@@ -258,11 +258,69 @@ header.fixed-top{
 
 #footer{
     background-color: var(--paragraph-white);
-    color: var(--background);
+    color: var(--gray);
 }
 
-#footer a{
+#footer img{
+    width: 15rem;
+    padding: 5rem 0 3rem 0;
+}
+
+#footer svg path{
+    fill: var(--gray);
+    transition: .3s;
+}
+
+#footer svg:hover path{
+    fill: var(--primary);
+}
+
+#footer a svg{
+    margin:0 1rem 3rem 0;
+}
+
+#footer p{
+    padding-bottom: 3rem;
+    font-weight: 100;
+}
+
+#footer .footer__contact{
+    border-top: 1px solid rgba(0,0,0,.2);
+    padding-top: 2rem;
+}
+
+#footer a:not(a.btn){
     text-decoration: none;
+    color: var(--gray);
+}
+
+#footer p a:not(a.btn):hover{
+    color: var(--primary);
+    text-decoration: underline;
+}
+
+#footer div p svg{
+    width: 2rem;
+    height: 2rem;
+    margin: 0 5px 0 0;
+}
+
+#footer div a.btn{
+    display: flex;
+    width: 10rem;
+    justify-content: center;
+    align-items: center;
+    margin-inline: auto;
+    background-color: var(--gray);
+    border: none;
+}
+
+#footer div a.btn:focus{   
+    box-shadow: 0 0 0 0.25rem rgba(128, 128, 128, 0.51);
+}
+
+#footer div a.btn:active{
+    border:1px solid rgb(104, 104, 104);
 }
 
 @-webkit-keyframes swing
